fix: Resolve TypeScript and ESLint errors for Netlify

--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "frontend/"
-  publish = "frontend/out"
-  command = "npm ci && npm run build && npm run export"
+  publish = "out"
+  command = "npm ci && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
