--- a/backend/package.json
+++ b/backend/package.json
@@ -27,22 +27,22 @@
     "winston": "^3.11.0",
     "uuid": "^9.0.1",
     "dotenv": "^16.3.1",
-    "express-async-errors": "^3.1.1"
-  },
-  "devDependencies": {
+    "express-async-errors": "^3.1.1",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/compression": "^1.7.5",
     "@types/uuid": "^9.0.7",
     "@types/node": "^20.10.5",
+    "typescript": "^5.3.3",
+    "prisma": "^5.7.1"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "@types/jest": "^29.5.8",
     "ts-jest": "^29.1.1",
-    "tsx": "^4.6.2",
-    "typescript": "^5.3.3",
-    "prisma": "^5.7.1"
+    "tsx": "^4.6.2"
   }
 }
