--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: signal-watcher-backend
     env: node
-    rootDir: backend
-    buildCommand: npm install --include=dev && npx prisma generate && npm run build
+
+    buildCommand: cd backend && npm install --include=dev && npx prisma generate && npm run build
     startCommand: npm start
     healthCheckPath: /health
     envVars:
